--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="Nbv-gR-eIC"/>
                     <connections>
-                        <outlet property="post" destination="YDO-ab-7y9" id="ODv-3Q-RQQ"/>
+                        <outlet property="post" destination="YDO-ab-7y9" id="HMe-Ml-Qgn"/>
                         <outlet property="refresh" destination="WH8-v7-9fD" id="AUB-0Y-kGX"/>
                     </connections>
                 </tableViewController>
@@ -405,6 +405,6 @@
         <image name="pin" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Awd-qE-0Md"/>
+        <segue reference="hgf-Lv-Mt7"/>
     </inferredMetricsTieBreakers>
 </document>
