--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -360,7 +360,7 @@
                         <outlet property="debugLabel" destination="Bv1-eQ-8pV" id="moL-Fw-xEJ"/>
                         <outlet property="loginButton" destination="rkm-NS-fT9" id="nKI-JT-LXN"/>
                         <outlet property="password" destination="aeO-0Z-pOE" id="TL1-dy-Grd"/>
-                        <outlet property="signUp" destination="JMj-fw-QsK" id="giP-to-BJS"/>
+                        <outlet property="signUp" destination="JMj-fw-QsK" id="zFv-t2-qV2"/>
                         <outlet property="udacityImage" destination="iLF-fU-kGQ" id="ekS-Ww-70p"/>
                         <outlet property="username" destination="RB2-SA-4tI" id="1ql-3g-iA4"/>
                     </connections>
