--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -393,6 +393,7 @@
                     <connections>
                         <segue destination="lfa-w1-fIH" kind="relationship" relationship="viewControllers" id="bFV-1s-oEC"/>
                         <segue destination="XeK-nY-VtS" kind="relationship" relationship="viewControllers" id="QRR-6Z-fVK"/>
+                        <segue destination="rc5-zA-DwA" kind="relationship" relationship="viewControllers" id="5Qa-wK-3Xk"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Z8-vU-dcb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -438,13 +439,96 @@
             </objects>
             <point key="canvasLocation" x="358" y="1083"/>
         </scene>
+        <!--CollectionView -->
+        <scene sceneID="rTb-GN-2jz">
+            <objects>
+                <collectionViewController id="ReJ-me-mTX" userLabel="CollectionView " customClass="CollectionViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="e9X-Mr-jqk">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="y8w-CD-xN1">
+                            <size key="itemSize" width="102" height="104"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="ZHY-xq-iDN" customClass="CollectionViewCell" customModule="OnTheMap" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pm-u0-o9B" userLabel="nameLabel">
+                                            <rect key="frame" x="8" y="11" width="85" height="19"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="19" id="kVO-sD-qPo"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="urlLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahK-B3-4hr" userLabel="urlLabel">
+                                            <rect key="frame" x="8" y="68" width="85" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="ahK-B3-4hr" firstAttribute="centerX" secondItem="ZHY-xq-iDN" secondAttribute="centerX" id="4qp-Ie-hRP"/>
+                                    <constraint firstItem="7pm-u0-o9B" firstAttribute="top" secondItem="ZHY-xq-iDN" secondAttribute="topMargin" constant="3" id="9GD-ES-l3L"/>
+                                    <constraint firstItem="ahK-B3-4hr" firstAttribute="top" secondItem="7pm-u0-o9B" secondAttribute="bottom" constant="38" id="Fnf-Ex-Rg7"/>
+                                    <constraint firstItem="7pm-u0-o9B" firstAttribute="leading" secondItem="ahK-B3-4hr" secondAttribute="leading" id="Hs4-aa-Z8p"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="ahK-B3-4hr" secondAttribute="bottom" constant="3" id="Vy2-p4-8f7"/>
+                                    <constraint firstItem="7pm-u0-o9B" firstAttribute="trailing" secondItem="ahK-B3-4hr" secondAttribute="trailing" id="Yoe-3c-Thp"/>
+                                    <constraint firstItem="ahK-B3-4hr" firstAttribute="leading" secondItem="ZHY-xq-iDN" secondAttribute="leadingMargin" id="f3Z-cc-Ikj"/>
+                                </constraints>
+                                <size key="customSize" width="100" height="100"/>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="ReJ-me-mTX" id="Mh4-zX-kwV"/>
+                            <outlet property="delegate" destination="ReJ-me-mTX" id="9m8-dz-5fS"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="uDK-j2-gvX"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MC2-FE-xKs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1061" y="1769"/>
+        </scene>
+        <!--Collection-->
+        <scene sceneID="sxo-Nd-km3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rc5-zA-DwA" userLabel="Collection" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="collection" id="uUr-6B-DnH" userLabel="Collection"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="c0u-uO-Xza">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ReJ-me-mTX" kind="relationship" relationship="rootViewController" id="xVH-f5-YL3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sAI-df-hf8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="249" y="1769"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="collection" width="30" height="30"/>
         <image name="list" width="32" height="32"/>
         <image name="map" width="32" height="32"/>
         <image name="pin" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="hgf-Lv-Mt7"/>
+        <segue reference="Awd-qE-0Md"/>
     </inferredMetricsTieBreakers>
 </document>
