--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -454,7 +454,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="ZHY-xq-iDN" customClass="CollectionViewCell" customModule="OnTheMap" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="ZHY-xq-iDN" customClass="CollectionCell" customModule="OnTheMap" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -489,6 +489,10 @@
                                     <constraint firstItem="ahK-B3-4hr" firstAttribute="leading" secondItem="ZHY-xq-iDN" secondAttribute="leadingMargin" id="f3Z-cc-Ikj"/>
                                 </constraints>
                                 <size key="customSize" width="100" height="100"/>
+                                <connections>
+                                    <outlet property="nameLabel" destination="7pm-u0-o9B" id="Klj-fA-YpH"/>
+                                    <outlet property="urlLabel" destination="ahK-B3-4hr" id="aeE-Zq-rQb"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
