--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -448,7 +448,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="y8w-CD-xN1">
-                            <size key="itemSize" width="102" height="104"/>
+                            <size key="itemSize" width="100" height="100"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -462,17 +462,17 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pm-u0-o9B" userLabel="nameLabel">
-                                            <rect key="frame" x="8" y="11" width="85" height="19"/>
+                                            <rect key="frame" x="25" y="11" width="51.5" height="19"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="19" id="kVO-sD-qPo"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="urlLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahK-B3-4hr" userLabel="urlLabel">
-                                            <rect key="frame" x="8" y="68" width="85" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <rect key="frame" x="32" y="68" width="37.5" height="12"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -480,13 +480,10 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="ahK-B3-4hr" firstAttribute="centerX" secondItem="ZHY-xq-iDN" secondAttribute="centerX" id="4qp-Ie-hRP"/>
-                                    <constraint firstItem="7pm-u0-o9B" firstAttribute="top" secondItem="ZHY-xq-iDN" secondAttribute="topMargin" constant="3" id="9GD-ES-l3L"/>
-                                    <constraint firstItem="ahK-B3-4hr" firstAttribute="top" secondItem="7pm-u0-o9B" secondAttribute="bottom" constant="38" id="Fnf-Ex-Rg7"/>
-                                    <constraint firstItem="7pm-u0-o9B" firstAttribute="leading" secondItem="ahK-B3-4hr" secondAttribute="leading" id="Hs4-aa-Z8p"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="ahK-B3-4hr" secondAttribute="bottom" constant="3" id="Vy2-p4-8f7"/>
-                                    <constraint firstItem="7pm-u0-o9B" firstAttribute="trailing" secondItem="ahK-B3-4hr" secondAttribute="trailing" id="Yoe-3c-Thp"/>
-                                    <constraint firstItem="ahK-B3-4hr" firstAttribute="leading" secondItem="ZHY-xq-iDN" secondAttribute="leadingMargin" id="f3Z-cc-Ikj"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="ahK-B3-4hr" secondAttribute="bottom" constant="12" id="AhR-Y8-MpP"/>
+                                    <constraint firstItem="7pm-u0-o9B" firstAttribute="top" secondItem="ZHY-xq-iDN" secondAttribute="topMargin" constant="3" id="j3F-e8-zBM"/>
+                                    <constraint firstAttribute="centerX" secondItem="ahK-B3-4hr" secondAttribute="centerX" id="mCK-JZ-F3W"/>
+                                    <constraint firstAttribute="centerX" secondItem="7pm-u0-o9B" secondAttribute="centerX" id="tio-r1-yu7"/>
                                 </constraints>
                                 <size key="customSize" width="100" height="100"/>
                                 <connections>
