--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -470,19 +470,20 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="urlLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahK-B3-4hr" userLabel="urlLabel">
-                                            <rect key="frame" x="32" y="68" width="37.5" height="12"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="urlLabel" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahK-B3-4hr" userLabel="urlLabel">
+                                            <rect key="frame" x="36" y="70" width="30" height="10"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <color key="backgroundColor" red="1" green="0.56183449070000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottomMargin" secondItem="ahK-B3-4hr" secondAttribute="bottom" constant="12" id="AhR-Y8-MpP"/>
                                     <constraint firstItem="7pm-u0-o9B" firstAttribute="top" secondItem="ZHY-xq-iDN" secondAttribute="topMargin" constant="3" id="j3F-e8-zBM"/>
-                                    <constraint firstAttribute="centerX" secondItem="ahK-B3-4hr" secondAttribute="centerX" id="mCK-JZ-F3W"/>
+                                    <constraint firstAttribute="centerX" secondItem="ahK-B3-4hr" secondAttribute="centerX" constant="-1" id="mCK-JZ-F3W"/>
                                     <constraint firstAttribute="centerX" secondItem="7pm-u0-o9B" secondAttribute="centerX" id="tio-r1-yu7"/>
                                 </constraints>
                                 <size key="customSize" width="100" height="100"/>
