--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -147,10 +147,10 @@
                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fv5-Ec-3r9">
-                                <rect key="frame" x="229" y="377" width="143" height="13"/>
+                                <rect key="frame" x="229" y="390" width="143" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="143" id="8B9-gz-Rl8"/>
-                                    <constraint firstAttribute="height" constant="13" id="Bkm-5f-1XG"/>
+                                    <constraint firstAttribute="height" constant="30" id="Bkm-5f-1XG"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Find on the Map">
@@ -183,7 +183,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NFH-AQ-5jh">
-                                <rect key="frame" x="259" y="418" width="82" height="30"/>
+                                <rect key="frame" x="259" y="438" width="82" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="WBz-Fv-4Yh"/>
                                     <constraint firstAttribute="width" constant="82" id="clZ-ZF-Wce"/>
@@ -206,6 +206,19 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xuN-ZI-tNc">
+                                <rect key="frame" x="167" y="100" width="268" height="30"/>
+                                <color key="backgroundColor" red="0.7961385722990183" green="0.89038660137966796" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="268" id="43o-IE-8hu"/>
+                                </constraints>
+                                <state key="normal" title="Browse to the link you've entered.">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="M5f-E1-EB4" kind="presentation" identifier="GoToWebViewController" id="WgC-nK-ctb"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -215,22 +228,24 @@
                             <constraint firstItem="Fv5-Ec-3r9" firstAttribute="centerX" secondItem="viX-C2-1ca" secondAttribute="centerX" id="3mW-UU-aiG"/>
                             <constraint firstItem="4Pl-EA-fsf" firstAttribute="top" secondItem="wDQ-8N-1yp" secondAttribute="bottom" constant="40" id="87a-mc-jWn"/>
                             <constraint firstItem="akB-tG-TtT" firstAttribute="leading" secondItem="HAg-kj-7EP" secondAttribute="leading" id="9d0-O0-g1s"/>
+                            <constraint firstItem="xuN-ZI-tNc" firstAttribute="centerX" secondItem="wDQ-8N-1yp" secondAttribute="centerX" constant="1.5" id="A6L-52-ZXg"/>
                             <constraint firstItem="viX-C2-1ca" firstAttribute="top" secondItem="O9X-7T-HD6" secondAttribute="bottom" constant="83" id="CEE-lZ-ZHL"/>
-                            <constraint firstItem="NFH-AQ-5jh" firstAttribute="top" secondItem="Fv5-Ec-3r9" secondAttribute="bottom" constant="28" id="H3j-S5-hn6"/>
+                            <constraint firstItem="NFH-AQ-5jh" firstAttribute="top" secondItem="Fv5-Ec-3r9" secondAttribute="bottom" constant="18" id="H3j-S5-hn6"/>
                             <constraint firstItem="akB-tG-TtT" firstAttribute="bottom" secondItem="dTt-Yh-Zyv" secondAttribute="top" id="Ipe-Ri-vut"/>
-                            <constraint firstItem="Fv5-Ec-3r9" firstAttribute="top" secondItem="4Pl-EA-fsf" secondAttribute="bottom" constant="62" id="KB1-T9-7H4"/>
+                            <constraint firstItem="Fv5-Ec-3r9" firstAttribute="top" secondItem="4Pl-EA-fsf" secondAttribute="bottom" constant="75" id="KB1-T9-7H4"/>
                             <constraint firstItem="8N3-wi-qRr" firstAttribute="centerX" secondItem="viX-C2-1ca" secondAttribute="centerX" id="MT1-fG-reL"/>
                             <constraint firstItem="akB-tG-TtT" firstAttribute="centerX" secondItem="NFH-AQ-5jh" secondAttribute="centerX" id="SNe-g4-77t"/>
                             <constraint firstItem="HAg-kj-7EP" firstAttribute="top" secondItem="wDQ-8N-1yp" secondAttribute="bottom" constant="20" id="TQZ-oE-sxl"/>
                             <constraint firstItem="akB-tG-TtT" firstAttribute="trailing" secondItem="HAg-kj-7EP" secondAttribute="trailing" id="Vsp-tm-RxI"/>
                             <constraint firstItem="4Pl-EA-fsf" firstAttribute="centerY" secondItem="nP2-tM-Ghp" secondAttribute="centerY" id="X32-we-ic6"/>
+                            <constraint firstItem="xuN-ZI-tNc" firstAttribute="top" secondItem="O9X-7T-HD6" secondAttribute="bottom" constant="80" id="ZrO-vy-ISs"/>
                             <constraint firstItem="4Pl-EA-fsf" firstAttribute="centerX" secondItem="unY-vX-5RK" secondAttribute="centerX" id="cvW-KO-dIU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="wDQ-8N-1yp" secondAttribute="trailing" constant="35" id="ho4-of-Vj7"/>
                             <constraint firstItem="wDQ-8N-1yp" firstAttribute="top" secondItem="viX-C2-1ca" secondAttribute="bottom" constant="9" id="k0P-is-YAd"/>
                             <constraint firstItem="wDQ-8N-1yp" firstAttribute="leading" secondItem="nP2-tM-Ghp" secondAttribute="leadingMargin" constant="34" id="kAV-Xu-t3A"/>
                             <constraint firstItem="HAg-kj-7EP" firstAttribute="bottom" secondItem="dTt-Yh-Zyv" secondAttribute="top" id="plF-tQ-ZsB"/>
                             <constraint firstAttribute="trailing" secondItem="HAg-kj-7EP" secondAttribute="trailing" id="qOR-0k-vTt"/>
-                            <constraint firstItem="unY-vX-5RK" firstAttribute="top" secondItem="Fv5-Ec-3r9" secondAttribute="bottom" constant="41" id="qT0-u0-BOL"/>
+                            <constraint firstItem="unY-vX-5RK" firstAttribute="top" secondItem="Fv5-Ec-3r9" secondAttribute="bottom" constant="11" id="qT0-u0-BOL"/>
                             <constraint firstItem="4Pl-EA-fsf" firstAttribute="leading" secondItem="wDQ-8N-1yp" secondAttribute="leading" id="rjk-OY-Vjf"/>
                             <constraint firstItem="akB-tG-TtT" firstAttribute="top" secondItem="unY-vX-5RK" secondAttribute="bottom" constant="88" id="vzD-NA-kzS"/>
                             <constraint firstItem="wDQ-8N-1yp" firstAttribute="trailing" secondItem="4Pl-EA-fsf" secondAttribute="trailing" id="xt6-5X-hfw"/>
@@ -239,6 +254,7 @@
                     <connections>
                         <outlet property="activityIndicatorView" destination="unY-vX-5RK" id="nGd-47-VLz"/>
                         <outlet property="address" destination="4Pl-EA-fsf" id="SVv-bO-uhX"/>
+                        <outlet property="browseToTheLink" destination="xuN-ZI-tNc" id="Hr6-QK-mg7"/>
                         <outlet property="enterALink" destination="8N3-wi-qRr" id="99H-mB-uzX"/>
                         <outlet property="findOnTheMap" destination="Fv5-Ec-3r9" id="d5z-WE-p09"/>
                         <outlet property="mapView" destination="HAg-kj-7EP" id="OId-7V-lX0"/>
@@ -250,6 +266,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PWk-jo-gp3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1897" y="581"/>
+        </scene>
+        <!--WebView Controller-->
+        <scene sceneID="Oaj-es-hbq">
+            <objects>
+                <viewController storyboardIdentifier="WebViewController" id="M5f-E1-EB4" userLabel="WebView Controller" customClass="WebViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <webView key="view" contentMode="scaleToFill" id="akh-LI-qXg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </webView>
+                    <connections>
+                        <outlet property="myWebView" destination="akh-LI-qXg" id="9fk-lv-H5A"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tkv-mI-d1c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2613" y="567"/>
         </scene>
         <!--LoginViewController-->
         <scene sceneID="cCf-5X-ZY1">
