Added var urlText in order to pass user's entered url.text to WebVC.  Url now shows up in searchBar and webView goes to right url.

--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -220,7 +220,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="MJU-ln-8jD" kind="presentation" id="AH8-hf-MTG"/>
+                                    <segue destination="MJU-ln-8jD" kind="presentation" identifier="GoToWebVC" id="AH8-hf-MTG"/>
                                 </connections>
                             </button>
                         </subviews>
