Fixed constraints for WebVC and added searchBarSearchButtonClicked to allow user to browse in webView.

--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -283,10 +283,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Amc-de-Qia">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QZs-Pm-YWd">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <items>
@@ -298,22 +294,26 @@
                                 </items>
                             </toolbar>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BAk-le-VGl">
-                                <rect key="frame" x="0.0" y="44" width="600" height="512"/>
+                                <rect key="frame" x="0.0" y="87" width="600" height="469"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Amc-de-Qia">
+                                <rect key="frame" x="0.0" y="43" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="leading" secondItem="jZ9-Mt-ikT" secondAttribute="leading" id="8rA-pw-hM7"/>
-                            <constraint firstItem="Amc-de-Qia" firstAttribute="top" secondItem="jZ9-Mt-ikT" secondAttribute="top" id="Bwb-UB-FrM"/>
-                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="leading" secondItem="BAk-le-VGl" secondAttribute="leading" id="CQu-HG-DGZ"/>
-                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="top" secondItem="BAk-le-VGl" secondAttribute="bottom" id="HW7-9l-Uyb"/>
-                            <constraint firstAttribute="trailing" secondItem="Amc-de-Qia" secondAttribute="trailing" id="HbV-tI-wP8"/>
-                            <constraint firstItem="BAk-le-VGl" firstAttribute="trailing" secondItem="Amc-de-Qia" secondAttribute="trailing" id="IXA-2P-gqN"/>
-                            <constraint firstItem="BAk-le-VGl" firstAttribute="leading" secondItem="Amc-de-Qia" secondAttribute="leading" id="Ohj-Vl-Nvr"/>
-                            <constraint firstItem="BAk-le-VGl" firstAttribute="trailing" secondItem="QZs-Pm-YWd" secondAttribute="trailing" id="Qyy-Jb-kMB"/>
-                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="bottom" secondItem="3Vs-Qf-f4J" secondAttribute="top" id="V4f-eT-pZ4"/>
-                            <constraint firstItem="BAk-le-VGl" firstAttribute="top" secondItem="Amc-de-Qia" secondAttribute="bottom" id="uY7-bL-BiQ"/>
+                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="top" secondItem="BAk-le-VGl" secondAttribute="bottom" id="3Uc-gt-P9F"/>
+                            <constraint firstItem="Amc-de-Qia" firstAttribute="leading" secondItem="BAk-le-VGl" secondAttribute="leading" id="9qg-ag-okd"/>
+                            <constraint firstItem="BAk-le-VGl" firstAttribute="top" secondItem="Amc-de-Qia" secondAttribute="bottom" id="Exu-AY-ae8"/>
+                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="leading" secondItem="jZ9-Mt-ikT" secondAttribute="leading" id="GVf-Rm-fp7"/>
+                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="bottom" secondItem="3Vs-Qf-f4J" secondAttribute="top" id="P1h-gc-yR6"/>
+                            <constraint firstItem="Amc-de-Qia" firstAttribute="trailing" secondItem="BAk-le-VGl" secondAttribute="trailing" id="QCB-JB-jhL"/>
+                            <constraint firstAttribute="trailing" secondItem="Amc-de-Qia" secondAttribute="trailing" id="QfD-dY-Am5"/>
+                            <constraint firstItem="BAk-le-VGl" firstAttribute="leading" secondItem="QZs-Pm-YWd" secondAttribute="leading" id="RLT-Fz-ahN"/>
+                            <constraint firstItem="BAk-le-VGl" firstAttribute="trailing" secondItem="QZs-Pm-YWd" secondAttribute="trailing" id="jKp-eB-pif"/>
+                            <constraint firstItem="Amc-de-Qia" firstAttribute="top" secondItem="FtP-IR-pK1" secondAttribute="bottom" constant="23" id="muH-Dg-J1z"/>
                         </constraints>
                     </view>
                     <connections>
@@ -323,7 +323,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="66X-K7-cKe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2636" y="671"/>
+            <point key="canvasLocation" x="2637" y="659"/>
         </scene>
         <!--LoginViewController-->
         <scene sceneID="cCf-5X-ZY1">
